# agg-dmp-contracts

./: .clang-format  .gitignore  .npmignore  CMakeLists.txt  README.md  config.example.json  package.json
aggregion/: Aggregion.hpp  Approves.cpp  Brands.hpp  CMakeLists.txt  Categories.cpp  Cities.cpp  Names.hpp  Providers.cpp  Providers.hpp  RequestsLog.cpp  RequestsLog.hpp  ScriptAccessRules.cpp  ScriptAccessRules.hpp  Scripts.cpp  Scripts.hpp  Services.cpp  Services.hpp  Utility.hpp  Vendors.hpp
aggregion/ricardian/: Aggregion.clauses.md  Aggregion.contracts.md
catalogs/: Brands.cpp  Brands.hpp  CMakeLists.txt  Categories.cpp  Categories.hpp  Cities.cpp  Cities.hpp  CityCountry.cpp  CityCountry.hpp  CityTypes.cpp  CityTypes.hpp  Countries.cpp  Countries.hpp  Names.hpp  Places.cpp  Places.hpp  RegionCountry.cpp  RegionCountry.hpp  Regions.cpp  Regions.hpp  Translations.cpp  Translations.hpp  VendorBrands.cpp  VendorBrands.hpp  Vendors.cpp  Vendors.hpp
catalogs/ricardian/: Catalogs.clauses.md  Catalogs.contracts.md
common/: Names.hpp
contract/: Aggregion.hpp  Approves.cpp  Brands.cpp  CMakeLists.txt  Categories.hpp  Cities.hpp  CityTypes.cpp  CityTypes.hpp  MarketCatalog.cpp  MarketCatalog.hpp  Names.hpp  Regions.cpp  Regions.hpp  RequestLogs.cpp  RequestsLog.cpp  RequestsLog.hpp  Scripts.cpp  Services.cpp  Utility.cpp  VendorBrands.cpp  VendorBrands.hpp  Vendors.cpp
contract/ricardian/: Aggregion.clauses.md  Aggregion.contracts.md
dmpusers/: CMakeLists.txt  Dmpusers.cpp  Dmpusers.hpp  Glossaries.cpp  Glossaries.hpp  GlossaryTerms.cpp  GlossaryTerms.hpp  Interactions.cpp  Interactions.hpp  Messages.cpp  Messages.hpp  Names.hpp
dmpusers/ricardian/: Dmpusers.clauses.md  Dmpusers.contracts.md
js/: AggregionBlockchain.js  AggregionContract.js  AggregionNode.js  AggregionUtility.js  CatalogsContract.js  CatalogsUtility.js  DelayMaker.js  DmpusersContract.js  DmpusersUtility.js  Fetch.js  GlossariesContract.js  GlossariesUtility.js  GlossaryTermsContract.js  GlossaryTermsUtility.js  InteractionsContract.js  InteractionsUtility.js  MessagesContract.js  MessagesUtility.js  TablesUtility.js  TestsConfig.js  index.js
scripts/: deploy.sh.in
test/: Aggregion.test.js  AggregionScripts.test.js  Blockchain.test.js  Catalogs.test.js  Dmpusers.test.js  DmpusersV2.test.js  Glossaries.test.js  GlossaryTerms.test.js  Interactions.test.js  Messages.test.js  TestConfig.js  TestTools.js
typings/: index.d.ts
